--- a/umishop_src/less/variables.less
+++ b/umishop_src/less/variables.less
@@ -27,12 +27,12 @@
 @orderBlue: #1c9eb4;
 @base_shadow: 0 0 11px 2px @base_shadow_color;
 
-@baseFont: 'open_sans';
-@mediumBold: 'open_sans_med';
-@highBold: 'open_sans_bold';
-@extraBold: 'bold_font';
-@doctor: 'docter_two';
-@light_font: 'open_sans_light';
+@baseFont: 'Montserrat', sans-serif;
+@mediumBold: 'Montserrat', sans-serif;
+@highBold: 'Montserrat', sans-serif;
+@extraBold: 'Montserrat', sans-serif;
+@doctor: 'Montserrat', sans-serif;
+@light_font: 'Montserrat', sans-serif;
 
 @baseFontSize: 14px;
 @h2_size: 29px;
