--- a/php/catalog/product/main/see_more/recently_visited_product_list.phtml
+++ b/php/catalog/product/main/see_more/recently_visited_product_list.phtml
@@ -25,6 +25,9 @@ $productList = $this->getRecentlyVisitedProducts();
 							<?= $this->render($product, 'catalog/product/preview/index') ?>
 						</div>
 					<?php endforeach; ?>
+					<div class="pool-filters__item pool-filters__item--hide"></div>
+					<div class="pool-filters__item pool-filters__item--hide"></div>
+					<div class="pool-filters__item pool-filters__item--hide"></div>
 				</div>
 			</div>
 		</div>
