--- a/php/catalog/product/main/see_more/related_product_list.phtml
+++ b/php/catalog/product/main/see_more/related_product_list.phtml
@@ -19,6 +19,9 @@ $productList = $this->getRelatedProducts($product);
             <?php foreach ($productList as $product): ?>
                 <?= $this->render($product, 'catalog/product/preview/index') ?>
             <?php endforeach; ?>
+            <div class="pool-filters__item pool-filters__item--hide"></div>
+					<div class="pool-filters__item pool-filters__item--hide"></div>
+					<div class="pool-filters__item pool-filters__item--hide"></div>
 
         </div>
         </div>
