--- a/php/catalog/product/preview/index.phtml
+++ b/php/catalog/product/preview/index.phtml
@@ -24,6 +24,8 @@ $sale = ($old_price > $price)?true:false;
 $sale_val = ($old_price!=0)?intval(100 - ($price/$old_price)*100):0;
 if(empty($prices['price']['prefix'])) $prices['price']['prefix'] = '';
 $price = ($price)?$prices['price']['prefix'].$price.'&nbsp'.$prices['price']['suffix']:'Цену уточняйте';
+
+$ids = json_decode($this->getCookie('favorites'));
 ?>
 
 <div class="card <?= $this->getNewLabelClass($product) ?> <?=$classes?>" data-element_id="<?= $product->getId() ?>" umi:region="row" umi:element-id="<?= $product->getId() ?>">
@@ -55,7 +57,7 @@ $price = ($price)?$prices['price']['prefix'].$price.'&nbsp'.$prices['price']['su
 			<path fill-rule="evenodd" clip-rule="evenodd" d="M0.125 2.25004V0.833374H12.875V2.25004H0.125ZM0.125 7.20837V5.79171H12.875V7.20837H0.125ZM0.125 12.1667V10.75H5.79167V12.1667H0.125ZM12.875 10.75V12.1667H11.1042V13.9375H9.6875V12.1667H7.91667V10.75H9.6875V8.97921H11.1042V10.75H12.875Z"></path>
 		</svg>
 		</div>
-		<div class="card__heart">
+		<div class="card__heart <?=(in_array($product->id,$ids)?'card__heart--active':'')?>">
 		<svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<path d="M7.11941 1.92959L7.50008 2.37662L7.88076 1.92959C8.56104 1.13072 9.60647 0.625 10.6876 0.625C12.5931 0.625 14.0834 2.11531 14.0834 4.02083C14.0834 5.19534 13.5597 6.30011 12.5362 7.55141C11.507 8.80972 10.0253 10.1544 8.19129 11.8175L8.19058 11.8182L7.4988 12.4479L6.80926 11.825L6.80834 11.8241C4.97463 10.1578 3.4932 8.81153 2.46404 7.55242C1.44045 6.30014 0.916748 5.19535 0.916748 4.02083C0.916748 2.11531 2.40706 0.625 4.31258 0.625C5.39369 0.625 6.43912 1.13072 7.11941 1.92959Z"></path>
 		</svg>
