--- a/src/assets/css/blocks/sections/articles.scss
+++ b/src/assets/css/blocks/sections/articles.scss
@@ -88,7 +88,7 @@
         }
 
         &-text {
-            font-size: 1.6rem;
+            font-size: 1.5em;
             line-height: 141.4%;
             color: #777777;
             max-width: 75rem;
