--- a/php/catalog/category.phtml
+++ b/php/catalog/category.phtml
@@ -137,6 +137,8 @@ $this->setCommonVar('smart_filters', $this->getSmartFilters($variables));
             </div>
           </div>
         </section>
+
+        <?php /*
         <section class="collection collection--catalog">
           <div class="center-wrap">
             <div class="simple-title collection__title">Коллекции</div>
@@ -202,5 +204,6 @@ $this->setCommonVar('smart_filters', $this->getSmartFilters($variables));
               </div>
             </div>
           </div>
-   
+     </section>
+     */ ?>
 <?php endif; ?>
