--- a/src/assets/css/blocks/comparisons.scss
+++ b/src/assets/css/blocks/comparisons.scss
@@ -6,6 +6,7 @@
     color: #454545;
     cursor: pointer;
     transition: all 0.5s;
+    margin: 0;
     svg {
         width: 1.3rem;
         margin-right: 0.6rem;
