--- a/php/emarket/compare/populated.phtml
+++ b/php/emarket/compare/populated.phtml
@@ -41,7 +41,7 @@ $fieldDataList = $this->filterAllowedFieldData($variables['fields']);
 						<div class="top-info">
 							<div class="check"></div>
 							<img src="<?=$this->thumb($this->getPhotoPath($product),'auto',150)[0]?>" alt="product image">
-							<h3><?=$product->name?></h3>
+							<a href="<?=$product->link?>" target="_blank"><h3><?=$product->name?></h3></a>
 						</div> <!-- .top-info -->
 
 						<ul class="cd-features-list">
