--- a/php/layout/main.phtml
+++ b/php/layout/main.phtml
@@ -1,5 +1,5 @@
-<?php $module = 'index'; if($variables['module']=='catalog') $module = 'catalog'; ?>
-<header class="header anchors header--index">
+<?php $module = 'index'; if($variables['module']=='catalog'||$variables['domain-id']==2) $module = 'catalog'; ?>
+<header class="header anchors header--<?=$module?>">
       <div class="header__wrap">
         <div class="header__burger desktop--hide">
           <div></div>
@@ -59,6 +59,24 @@
               </p>
               <?= $this->render($variables, 'layout/header/currencySelector') ?>
               
+              <?php if($module=='catalog'): ?>
+              <a class="header__favorites comparisons" data-anchors href="/izbrannoe/">
+                <svg viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.11941 1.92959L7.50008 2.37662L7.88076 1.92959C8.56104 1.13072 9.60647 0.625 10.6876 0.625C12.5931 0.625 14.0834 2.11531 14.0834 4.02083C14.0834 5.19534 13.5597 6.30011 12.5362 7.55141C11.507 8.80972 10.0253 10.1544 8.19129 11.8175L8.19058 11.8182L7.4988 12.4479L6.80926 11.825L6.80834 11.8241C4.97463 10.1578 3.4932 8.81153 2.46404 7.55242C1.44045 6.30014 0.916748 5.19535 0.916748 4.02083C0.916748 2.11531 2.40706 0.625 4.31258 0.625C5.39369 0.625 6.43912 1.13072 7.11941 1.92959Z"></path>
+                </svg>Избранное
+              </a>
+              <a class="comparisons" href="/emarket/compare/" data-anchors>
+                <svg viewBox="0 0 13 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M0.125 2.25004V0.833374H12.875V2.25004H0.125ZM0.125 7.20837V5.79171H12.875V7.20837H0.125ZM0.125 12.1667V10.75H5.79167V12.1667H0.125ZM12.875 10.75V12.1667H11.1042V13.9375H9.6875V12.1667H7.91667V10.75H9.6875V8.97921H11.1042V10.75H12.875Z"></path>
+                </svg>Сравнение
+              </a>
+              <div class="header__basket" onclick="show_popup(&quot;basket&quot;)">
+                <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5.4 14.4C4.41 14.4 3.6 15.21 3.6 16.2C3.6 17.19 4.41 18 5.4 18C6.39 18 7.2 17.19 7.2 16.2C7.2 15.21 6.39 14.4 5.4 14.4ZM0 0V1.8H1.8L5.04 8.64L3.78 10.8C3.69 11.07 3.6 11.43 3.6 11.7C3.6 12.69 4.41 13.5 5.4 13.5H16.2V11.7H5.76C5.67 11.7 5.58 11.61 5.58 11.52V11.43L6.39 9.89997H13.05C13.77 9.89997 14.31 9.53996 14.58 8.99996L17.82 3.15C18 2.97 18 2.88 18 2.7C18 2.16 17.64 1.8 17.1 1.8H3.78L2.97 0H0ZM14.4 14.4C13.41 14.4 12.6 15.21 12.6 16.2C12.6 17.19 13.41 18 14.4 18C15.39 18 16.2 17.19 16.2 16.2C16.2 15.21 15.39 14.4 14.4 14.4Z"></path>
+                </svg>
+              </div>
+              <?php endif; ?>
+
             </div>
           </div>
         </div>
@@ -217,6 +235,21 @@
       <h2 class="popup-form__title">Заказать звонок</h2>
       <div class="popup-form__text"> 
       <?= $this->render($variables, 'blocks/forms/callback') ?>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="popup-wrap" id="oneclick_modal">
+  <div class="popup">
+    <div class="popup__close" onclick="close_popup('oneclick_modal')">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="popup-form">
+      <h2 class="popup-form__title">Быстрый заказ</h2>
+      <div class="popup-form__text"> 
+      <?= $this->render($variables, 'blocks/forms/formOneClick') ?>
       </div>
     </div>
   </div>
