--- a/src/assets/css/blocks/header.scss
+++ b/src/assets/css/blocks/header.scss
@@ -140,6 +140,7 @@
 		line-height: 119.4%;
 		font-size: 1.3rem;
 		color: #6D6D6D;
+		margin: 0;
 		margin-right: 2rem;
 		display: flex;
 		align-items: center;
